--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,6 +31,7 @@ services:
       CONCOURSE_MAIN_TEAM_LOCAL_USER: test
       CONCOURSE_CLUSTER_NAME: dev
       CONCOURSE_ENABLE_ACROSS_STEP: "true"
+      CONCOURSE_ENABLE_WATCH_ENDPOINTS: "true"
 
   worker:
     build: .
